# anthro-benchmark

./: .gitignore  README.md  anthro_eval_cli.py  croissant.json  pyproject.toml  setup.py
anthro_benchmark/: __init__.py
anthro_benchmark/analysis/: __init__.py  analysis.py
anthro_benchmark/classifier/: __init__.py  behavior_dict.json  classifiers.py  rating.py
anthro_benchmark/core/: __init__.py  llm_client.py
anthro_benchmark/generator/: __init__.py  generator.py
dialogue_gen/: rating.py  rating_process.py
prompt_sets/: first_turns.csv
