[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anthro_benchmark"
version = "0.1.0"
authors = [
  { name="Your Name", email="you@example.com" }, # TODO: Replace with your details
]
description = "A library for generating, rating, and analyzing dialogues to evaluate anthropomorphic behaviors in LLMs."
readme = "README.md" # Optional: Create a README.md file
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: Choose your license
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas",
    "plotly",
    "openai",       # Dependency for OpenAI models
    "anthropic",    # Dependency for Anthropic models
    # Add other dependencies if needed, e.g., specific versions
]

[project.optional-dependencies]
dev = ["pytest", "flake8"] # Example development dependencies
plotting = ["kaleido>=0.1.0,<0.2.0"] # Optional dependency for static plot export

[project.urls]
"Homepage" = "https://github.com/yourusername/anthro_benchmark" # TODO: Replace with your repo URL
"Bug Tracker" = "https://github.com/yourusername/anthro_benchmark/issues"

# Define the command-line script entry point
[project.scripts]
anthro-eval = "anthro_eval_cli:main" 