[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anthro-benchmark"
version = "0.1.0"
authors = [
  { name="Lujain Ibrahim", email="lujain.ibrahim@oii.ox.ac.uk" },
]
description = "A library for generating, rating, and analyzing dialogues to evaluate anthropomorphic behaviors in LLMs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pandas",
    "anthropic",
    "google-generativeai",
    "openai",
    "mistralai",
    "plotly",
    "kaleido",
]

[project.urls]
"Homepage" = "https://github.com/google-deepmind/anthro-benchmark"
"Bug Tracker" = "https://github.com/google-deepmind/anthro-benchmark/issues"

# Define the command-line script entry point
[project.scripts]
anthro-eval = "anthro_eval_cli:main" 
